Medium Article Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2521,7 +2521,7 @@
       <li>
         <a href="https://medium.com/@lissandrafuganti/instalando-react-native-em-um-computador-com-processador-amd-7749bd8b97b3" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/medium.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
