Free for Dev Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2536,7 +2536,7 @@
       <li>
         <a href="https://free-for.dev/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/free-for-dev.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
