Styled Components Thumnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2581,7 +2581,7 @@
       <li>
         <a href="https://www.styled-components.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/styled-components.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
