CSS clip path maker Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2596,7 +2596,7 @@
       <li>
         <a href="http://bennettfeely.com/clippy/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/css-clip-path-maker.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
