HTML5 Shiv Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2611,7 +2611,7 @@
       <li>
         <a href="https://github.com/afarkas/html5shiv" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/html5-shiv.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
