Let's Encrypt Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2776,7 +2776,7 @@
       <li>
         <a href="https://letsencrypt.org/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/lets-encrypt.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
