Cloudflare Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2791,7 +2791,7 @@
       <li>
         <a href="https://www.cloudflare.com/br/ssl/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/cloudflare.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
