Certbot Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2806,7 +2806,7 @@
       <li>
         <a href="https://certbot.eff.org/" target="_blank">
           <div class="resource-icon"> 
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/certbot.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
