Geocertsssl Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2821,7 +2821,7 @@
       <li>
         <a href="https://www.geocerts.com/ssl_checker" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/geocertsssl.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
