Last Pass Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2836,7 +2836,7 @@
       <li>
         <a href="https://www.lastpass.com/pt" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/lastpass.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
