--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2851,7 +2851,7 @@
       <li>
         <a href="https://www.docker.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/65467832_2420859664814819_2002543499785797632_o.png?_nc_cat=102&ccb=2&_nc_sid=1eb0c7&_nc_ohc=QLhLWvRqw5oAX9StroD&_nc_ht=scontent.fcwb2-1.fna&oh=da69f75cb5d7d7c468886b361ceee564&oe=5FC63492" alt="#" />
+            <img src="../../base/images/docker.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
