--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2881,7 +2881,7 @@
       <li>
         <a href="https://stateofjs.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/state-of-javascript.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
