You Don't Know JS Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2896,7 +2896,7 @@
       <li>
         <a href="https://github.com/cezaraugusto/You-Dont-Know-JS?fbclid=IwAR1KQKuIZBcZ-l37rMZYY4Z9f4pobfM6ix0ZQytqfpWkLka9pkPVmpSKMI8" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/js.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
