UnDraw Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2911,7 +2911,7 @@
       <li>
         <a href="https://browser-update.org/?fbclid=IwAR0Z8JeKFbjnR_O203XtOyk_u_C22bJwJZWgh1HAbtCitFDiFUsRzFozFgc" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/browser-update.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -2926,7 +2926,7 @@
       <li>
         <a href="https://undraw.co/illustrations" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/undraw.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
