--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2941,7 +2941,7 @@
       <li>
         <a href="https://getemoji.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/get-emoji.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
