Conventional Commits Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2956,7 +2956,7 @@
       <li>
         <a href="https://www.conventionalcommits.org/en/v1.0.0/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/conventional-commits.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
