--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2971,7 +2971,7 @@
       <li>
         <a href="https://github.com/anuraghazra/github-readme-stats/blob/master/readme.md" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/github-readme-stats.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
