Mobile input types Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2992,7 +2992,7 @@
       <li>
         <a href="http://mobileinputtypes.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/mobile-input-types.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
