--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3256,7 +3256,7 @@
       <li>
         <a href="https://codesignal.com/blog/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/119008774_2725600627695128_1040227185133532524_n.png?_nc_cat=106&ccb=2&_nc_sid=1eb0c7&_nc_ohc=StEm1U73ihkAX-QA3Ve&_nc_ht=scontent.fcwb2-1.fna&oh=3b494672aad289fb4c15bb4c40a415e1&oe=5FC79057" alt="#" />
+            <img src="../../base/images/codesignal.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
