CSS Author Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3301,7 +3301,7 @@
       <li>
         <a href="https://cssauthor.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/15420771_1563459993667829_3881871322970380143_n.jpg?_nc_cat=107&ccb=2&_nc_sid=1eb0c7&_nc_ohc=KtQ7Xx2UEDcAX_eUDu8&_nc_ht=scontent.fcwb2-2.fna&tp=6&oh=3694d131c12c61e4ef7dbb58b6a7fd71&oe=5FC6418D" alt="#" />
+            <img src="../../base/images/css-author.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
