Bitdegree Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3336,7 +3336,7 @@
       <li>
         <a href="https://www.bitdegree.org/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/bitdegree.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
