Dio Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3351,7 +3351,7 @@
       <li>
         <a href="https://digitalinnovation.one/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/dio.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
