Loaine Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3366,7 +3366,7 @@
       <li>
         <a href="https://loiane.training/cursos" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/loiane.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
