SSL on GH-pages Custon Domain Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3386,7 +3386,7 @@
       <li>
         <a href="https://www.youtube.com/watch?v=Y1Q3fD2Ogvk" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/zachary.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
