Thumbnail 15 Best Youtube Channel Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3401,7 +3401,7 @@
       <li>
         <a href="http://www.hongkiat.com/blog/web-dev-youtube-channels/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/hongkiat.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
