Thumbnail Button Tutorials for Designers Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3416,7 +3416,7 @@
       <li>
         <a href="http://www.hongkiat.com/blog/css3-button-tutorials/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/hongkiat.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
