Thumbnail BR Desenvolvimento Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3446,7 +3446,7 @@
       <li>
         <a href="https://github.com/carolcodes/youtube-br-desenvolvimento?fbclid=IwAR3xUDZGm1arUtHLHINMpSReMWZIr_kR_9hGC5y1G8vvY00aLq39aAJcv14" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/youtube-br-desenvolvimento.jpg" alt="#" />
           </div>  
         </a>
         <div class="resource-details">
