Thumbnail Ruby Puro - Curso Gratuito sobre Ruby Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3461,7 +3461,7 @@
       <li>
         <a href="https://onebitcode.com/course/ruby-puro/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/ruby-puro.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
