Poline - enigmatic color palette generator

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -736,7 +736,20 @@
 					<h2> <a href="http://paletton.com/#uid=1000u0kllllaFw0g0qFqFg0w0aF" target="_blank">Paletton</a> </h2>
 					<p>Design your stunning website</p>
 				</div>
-				<a class="resource-button" href="http://paletton.com/#uid=1000u0kllllaFw0g0qFqFg0w0aF" target="_blank">Veja</a>
+				<a class="resource-button" href="http://paletton.com/#uid=1000u0kllllaFw0g0qFqFg0w0aF" target="_blank">Veja</a>				
+			</li>
+
+			<li>
+				<div class="resource-icon">
+					<a href="https://meodai.github.io/poline/" target="_blank">
+						<img src="../../base/images/poline.jpg" alt="#" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://meodai.github.io/poline/" target="_blank">Poline</a> </h2>
+					<p>is an enigmatic color palette generator, that harnesses the mystical witchcraft of polar coordinates</p>
+				</div>
+				<a class="resource-button" href="https://meodai.github.io/poline/" target="_blank">Veja</a>
 				<div id="icones"></div>
 			</li>
 
