--- a/index.html
+++ b/index.html
@@ -497,12 +497,14 @@
         <div class="col-lg-8 col-lg-offset-2">
           <div class="modal-body"> 
             <!-- Project Details Go Here -->
-            <h2>Projeto3</h2>
-            <p class="item-intro">em breve...</p>
+            <h2>Pizzap</h2>
+            <p class="item-intro">Projeto para Pizzaria Pizzap</p>
             <img class="img-responsive img-centered" src="img/portfolio/03-preview.jpg" alt="">
-            <p>logo terá uma descrição aqui</p>
+              <a href="https://pizzap-reactjs-styled-components.netlify.app/" target="_blank">
+                <p class="text-white bg-dark">Visualizar Site</p>
+              </a>              
             <ul class="list-inline">
-              <li><strong>Cliente</strong>: </li>
+              <li><strong>Cliente</strong>: Pizzap</li>
               <li><strong>Categoria</strong>: Web Design</li>
             </ul>
             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Fechar Projeto</button>
