Mudar cor da imagem com CSS Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3506,7 +3506,7 @@
       <li>
         <a href="https://pt.stackoverflow.com/questions/215148/mudar-cor-da-imagem-com-css" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/stack.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
