Boostrap Sidebar Examples Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3521,7 +3521,7 @@
       <li>
         <a href="https://bootsnipp.com/tags/sidebar" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/bootsnipp.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
