How to use minmax() CSS Grid Thumbnail updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3568,7 +3568,7 @@
       <li>
         <a href="https://www.hongkiat.com/blog/css-grid-layout-minmax/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/hongkiat.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
