--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3589,7 +3589,7 @@
       <li>
         <a href="https://www.codecademy.com" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/codeacademy.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
