--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3604,7 +3604,7 @@
       <li>
         <a href="https://learn.freecodecamp.org" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/29177028_2059455867661119_3397858896855957504_n.png?_nc_cat=105&ccb=2&_nc_sid=1eb0c7&_nc_ohc=z8DSbR3uDcEAX8VLvrg&_nc_ht=scontent.fcwb2-1.fna&oh=7f99f640787effd482927f5898c714d8&oe=5FC5D95C" alt="#" />
+            <img src="../../base/images/freecodecamp.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
