SoloLearn Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3619,7 +3619,7 @@
       <li>
         <a href="https://www.sololearn.com" target="_blank">
           <div class="resource-icon"> 
-            <img src="https://pbs.twimg.com/profile_images/378800000242038210/3c561ae8a8bbf4d8f7c3428e49a92e51_400x400.png" alt="#" />
+            <img src="../../base/images/sololearn.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
