Interneting is Hard - Link and Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3632,18 +3632,18 @@
       </li>
 
       <li>
-        <a href="https://internetingishard.com/" target="_blank">
+        <a href="https://internetingishard.netlify.app/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/interneting-is-hard.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://internetingishard.com/" target="_blank">Interneting is Hard</a>
+            <a href="https://internetingishard.netlify.app/" target="_blank">Interneting is Hard</a>
           </h2>
           <p>Learning Code</p>
         </div>
-        <a class="resource-button" href="https://internetingishard.com/" target="_blank">Veja</a>   
+        <a class="resource-button" href="https://internetingishard.netlify.app/" target="_blank">Veja</a>   
       </li>
 
       <li>
