Trybe - Link and Thubnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3647,18 +3647,18 @@
       </li>
 
       <li>
-        <a href="http://www.codenation.com.br/" target="_blank">
+        <a href="https://www.betrybe.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/trybe.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="http://www.codenation.com.br/" target="_blank">Code Nation</a>
+            <a href="https://www.betrybe.com/" target="_blank">Trybe</a>
           </h2>
           <p>Learning Code</p>
         </div>
-        <a class="resource-button" href="http://www.codenation.com.br/" target="_blank">Veja</a>   
+        <a class="resource-button" href="https://www.betrybe.com/" target="_blank">Veja</a>   
       </li>
 
       <li>
