--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3664,7 +3664,7 @@
       <li>
         <a href="https://www.caelum.com.br/apostilas" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/82188689_10157257044689086_791244971490410496_o.png?_nc_cat=103&ccb=2&_nc_sid=1eb0c7&_nc_ohc=7UiqZMWDBIsAX9R4kyz&_nc_ht=scontent.fcwb2-1.fna&oh=96a6305f680182552542d7e259b52af0&oe=5FC7B0D8" alt="#" />
+            <img src="../../base/images/alura.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
