--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3679,7 +3679,7 @@
       <li>
         <a href="https://github.com/lfeh/frontend-challenges" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/front-end-challenges.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
