GSAP Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1169,7 +1169,7 @@
       <li>
         <a href="https://greensock.com/gsap" target="_blank">
           <div class="resource-icon">
-            <img src="https://pbs.twimg.com/profile_images/497590165750034433/h2gXRRrD_400x400.png" alt="#" />
+            <img src="../../base/images/gsap.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
