Aprendendo Padrões de Projeto com Javascript - Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3694,7 +3694,7 @@
       <li>
         <a href="https://github.com/fhferreira/aprendendo-padroes-de-projeto-javascript/blob/master/README.md" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/padroes-projeto-javascript.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
