CSS animations - Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3709,7 +3709,7 @@
       <li>
         <a href="https://css-animations.io/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/css-animations.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
