Como ter Domínio Próprio no Github Pages - Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3784,7 +3784,7 @@
       <li>
         <a href="https://willianjusten.com.br/dominio-proprio-no-github-pages/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/github-pages.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
