Web Designer x Desenvolvedor Web - Entenda a diferença | Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3799,7 +3799,7 @@
       <li>
         <a href="https://becode.com.br/web-designer-x-desenvolvedor-web-entenda-a-diferenca/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p148x148/12507464_1505737369722638_8969977578519242296_n.png?_nc_cat=106&ccb=2&_nc_sid=1eb0c7&_nc_ohc=r3ih8dqpsMwAX_bUJ7O&_nc_ht=scontent.fcwb2-1.fna&oh=a22dba900dabc07a9accca51bb08c5b1&oe=5FC668D6" alt="#" />
+            <img src="../../base/images/becode.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
