CSS3 Cheat Sheet, Website Setup - Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3829,7 +3829,7 @@
       <li>
         <a href="https://websitesetup.org/css3-cheat-sheet/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/website-setup.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
