Style Stage Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3844,7 +3844,7 @@
       <li>
         <a href="https://stylestage.dev/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/style-stage.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
