Javascript | MDN Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3859,7 +3859,7 @@
       <li>
         <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript?fbclid=IwAR3cMJld5gO-OXj3gQdnOngCErW9X-sGpsIYN2qYkNr-zXZ_pNU9x4R1Xqk" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/mdn.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
