--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3911,7 +3911,7 @@
       <li>
         <a href="https://www.microsoft.com/pt-br/learning/exam-70-480.aspx" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/11535890_432377773608401_7311771238718502323_n.png?_nc_cat=102&ccb=2&_nc_sid=1eb0c7&_nc_ohc=Hf6dh6JkffgAX-e7EEW&_nc_ht=scontent.fcwb2-1.fna&oh=8d02bbed92de702c3c4d3ad1cf6fda4a&oe=5FC61532" alt="#" />
+            <img src="../../base/images/microsoft.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
