Apostila Firebrand Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3941,7 +3941,7 @@
       <li>
         <a href="http://www.firebrandtraining.co.uk/pdf/learn/microsoft/mcsd-web-applications-html5-courseware.pdf" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/firebrand.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
