Accelerated Ideas Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3956,7 +3956,7 @@
       <li>
         <a href="http://www.accelerated-ideas.com/70480-practice-test.aspx#.W_Ry0-hKiUm" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/accelerated-ideas.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
