Plano de estudos - Text exam 70-480 Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3971,7 +3971,7 @@
       <li>
         <a href="https://medium.com/@lucasjleandro/plano-de-estudos-exam-70-480-964d0dc72d8b" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/medium.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
