Microsoft Virtual Academy Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3986,7 +3986,7 @@
       <li>
         <a href="https://mva.microsoft.com/en-us/training-courses/developing-in-html5-with-javascript-and-css3-jump-start-8223?l=lCnp5kIy_5104984382" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/mva.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
