Livros Gratuitos de Computação Thumbnail Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -4018,13 +4018,13 @@
       <li>
         <a href="https://gist.github.com/LeeJunNakao/dea94882fcd6d3578ed749e6555f3157?fbclid=IwAR0kQwR6ujc2OVgMhd4_HvMR6zTawGfDqsU3KecrYTGlw58izPjq7RsYsfo" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/github-gist.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
             <a href="https://gist.github.com/LeeJunNakao/dea94882fcd6d3578ed749e6555f3157?fbclid=IwAR0kQwR6ujc2OVgMhd4_HvMR6zTawGfDqsU3KecrYTGlw58izPjq7RsYsfo" target="_blank">
-              Livros Gratuitos em Computação</a>
+              Livros Gratuitos de Computação</a>
           </h2>
           <p>Lista de Livros</p>
         </div>
