Morningstar Thumbnail Updated

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -608,7 +608,7 @@
       <li>
         <a href="https://www.morningstar.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/morningstar.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
