Scrum Alliance Thumbnail Updated

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -627,12 +627,12 @@
       <li>
         <a href="https://www.scrumalliance.org/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/scrum-alliance.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://www.scrumalliance.org/" target="_blank">Scrum Aliance</a>
+            <a href="https://www.scrumalliance.org/" target="_blank">Scrum Alliance</a>
           </h2>
           <p>Scrum - Eventos e networking</p>
         </div>
