Agile Alliance Thumbnail Updated

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -642,7 +642,7 @@
       <li>
         <a href="https://www.agilealliance.org/agilealliancebrazil/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/agile-alliance.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
