O Manifesto Ágil Thumbnail Updated

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -657,7 +657,7 @@
       <li>
         <a href="http://agilemanifesto.org/iso/ptbr/manifesto.html" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/o-manifesto-agil.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
