ffffidget Thumbnail Updated

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -403,7 +403,7 @@
       <li>
         <a href="https://ffffidget.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/fff.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
