--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -676,7 +676,7 @@
       <li>
         <a href="https://www.columnfivemedia.com/how-to-create-a-brand-identity" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/column-five.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
