Brand Persona Thumbnail Updated

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -691,7 +691,7 @@
       <li>
         <a href="https://rockcontent.com/blog/brand-persona/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/rockcontent.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
