Simply Wall ST Thumnail Updated

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -578,7 +578,7 @@
       <li>
         <a href="https://simplywall.st/about" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/simply-wall-st.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
