--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
       <!--<a class="navbar-brand" href="index.html"><i class="fa fa-flag-checkered fa-flip-horizontal"></i> Tempo<strong></strong></a>--> 
-    <img src="img/logo-robson-designer.png" alt="Robson Designer logo" href="index.html">
+    <a href="#home" class="page-scroll"><img src="img/logo-robson-designer.png" alt="Robson Designer logo"></a>
     </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
