--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       </div>
       <div class="col-md-6 wow fadeInRight">
           <h4>Robson Vinicius de Oliveira</h4>
-          <p>Sou Designer formado em Design - Bacharelado e atuo há mais de 10 anos na área, possuo pós graduação em Aplicativos de Jogos Digitais e MBA Administração e Marketing. Trabalho na criação de materiais impressos, edição de vídeos, desenvolvimento web e SEO. <br></p>
+          <p>Formado em Design - Bacharelado e atuo há mais de 10 anos na área, possuo pós graduação em Aplicativos de Jogos Digitais e MBA Administração e Marketing. Trabalho na criação de materiais impressos, edição de vídeos, desenvolvimento web e SEO. <br></p>
           <div class="space"></div>
           <h4>Competências:</h4>
          <!--tinha um texto aqui -->
