How to create a brande style guide Thumbnail Updated

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -706,7 +706,7 @@
       <li>
         <a href="https://99designs.com.br/blog/logo-branding/how-to-create-a-brand-style-guide/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/99design.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
