--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   </div> <!--a href="#works-section-->
   <div class="social-icons-banner fa-lg">
     <a href="https://api.whatsapp.com/send?phone=+55(41)%2098832%202873&text=Ol%C3%A1,%20Robson" target="_blank"><i class="fa fa-whatsapp"></i></a>
-    <a href="https://twitter.com/robsonviniciusr" target="_blank"><i class="fa fa-twitter"></i></a>
+    <!--<a href="https://twitter.com/robsonviniciusr" target="_blank"><i class="fa fa-twitter"></i></a> -->
     <a href="https://www.linkedin.com/in/robson-vinicius" target="_blank"><i class="fa fa-linkedin"></i></a>
   </div>
 </header>
@@ -404,12 +404,13 @@
               <i class="fa fa-linkedin"></i>
             </a>
           </li>
+          <!--
           <li>
             <a href="http://www.twitter.com/robsonviniciusr" target="_blank">
               <i class="fa fa-twitter"></i>
             </a>
           </li>
-          
+          -->
          </div>
         </ul>
         
