Updated font Mother Base Site: Chakra Petch

--- a/my/index.html
+++ b/my/index.html
@@ -8,6 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="base/favicon.ico" rel="shortcut icon" />
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" type="text/css" href="base/css/style-motherbase.css">
   <link rel="stylesheet" href="base/font-awesome-4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="base/css/mystyle.css">
@@ -16,7 +20,7 @@
 <body>
   <header class="header">
     <a href="index.html">
-      <div><h1>MOTHER BASE</h1></div>
+      <div><h1>Mother Base</h1></div>
     </a>
   </header>
   <main>
